<resources>
    <string name="app_name" translatable="false">CroudTrip!</string>
    <string name="app_icon_description">CroudTrip! Icon</string>
    <string name="error">Please try it again. Something went wrong</string>
    <string name="menu_join_trip">Join trip</string>
    <string name="menu_my_trip">My trip</string>
    <string name="menu_offer_trip">Offer trip</string>
    <string name="menu_profile">My profile</string>
    <string name="menu_edit_profile">Edit profile</string>
    <string name="menu_settings">Settings</string>
    <string name="login_email">Login with email</string>
    <string name="skip">Browse trips without logging in</string>
    <string name="hint_email">Your E-mail</string>
    <string name="hint_firstname">First name</string>
    <string name="hint_lastname">Last name</string>
    <string name="hint_password">Your Password</string>
    <string name="register">Create Account</string>
    <string name="registration_success">Registration success</string>
    <string name="registration_error_general">Sorry, there was an error, please retry</string>
    <string name="registration_error_conflict">Email has already been registered</string>
    <string name="register_button">Sign up for CrowdTrip!</string>
    <string name="email_invalid">Please enter a real Email address</string>
    <string name="first_last_mandatory">First and Last names are mandatory fields</string>
    <string name="login">Login</string>
    <string name="forgot_pwd">Forgot Your Password?</string>
    <string name="invalid_login">Invalid Login</string>
    <string name="login_success">Login successful</string>
    <string name="login_error_general">An unexpected error occurred, please retry</string>
    <string name="login_facebook_description">Login via Facebook</string>
    <string name="login_google_description">Login via Google+</string>
    <string name="logout">Logout</string>
    <string name="profile_edit">Edit profile</string>
    <string name="profile_address">Address</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_birthyear">Birth Year</string>
    <string name="profile_male">Male</string>
    <string name="profile_female">Female</string>
    <string name="profile_unknown"><i>unknown</i></string>
    <string name="profile_image_description">Profile image</string>
    <string name="profile_error_general">Your profile could not be loaded</string>
    <string name="title_activity_maps">Map</string>
    <string name="join_specify_start">Specify pick-up location</string>
    <string name="join_choose_destination">Enter destination here</string>
    <string name="join_change_destination">Change destination</string>
    <string name="join_max_waiting">Max waiting time (in minutes):</string>
    <string name="join_trip">Join Trip!</string>
    <plurals name="join_trip_results">
        <item quantity="one">We found %d ride for you</item>
        <item quantity="other">We found %d rides for you</item>
    </plurals>
    <string name="join_trip_results_costs">%s €</string>
    <string name="join_trip_results_distance_km">%d km</string>
    <string name="join_trip_results_distance_m">%d m</string>
    <string name="join_trip_results_duration_min">%dmin</string>
    <string name="join_trip_results_duration_hmin">%1$dh %2$dmin</string>
    <string name="join_trip_results_error">An error occurred when sending your request to the server. Please try again.</string>
    <string name="join_trip_results_waiting">We try our best to find trips for you! Hang in there!</string>
    <string name="join_trip_results_join">i want to join!</string>
    <string name="join_trip_results_stop">Stop searching</string>
    <string name="join_trip_results_canceled">Searching for trips stopped</string>
    <string name="join_trip_results_sending">You have contacted the driver&#8230; waiting for response</string>
    <string name="join_trip_results_pickup">Driver picks you up at approx.</string>
    <string name="join_trip_results_happy">Have a nice trip</string>
    <string name="join_trip_results_driverArrival">My driver is here</string>
    <string name="join_trip_results_reached">I´ve reached my destination</string>
    <string name="join_trip_results_left_Car">Left the car</string>
    <string name="join_trip_results_report">Report driver</string>
    <string name="join_trip_results_cancel">Cancel trip</string>
    <plurals name="join_trip_results_my_drivers">
        <item quantity="one">My Driver</item>
        <item quantity="other">My Drivers</item>
    </plurals>
    <string name="join_trip_results_price">%1$s.%2$s €</string>
    <string name="my_trip_passenger_error_no_trip">Error: You have currently no running trip.</string>
    <string name="load_trip_passenger_failed">Loading your trip failed. Please try again.</string>
    <string name="join_trip_requests_no_requests">There are no join requests at the moment.</string>
    <string name="join_trip_requests_error">An error occurred when looking up you passengers. Please try again.</string>
    <string name="join_trip_requests_earnings">%1$s.%2$s €</string>
    <string name="join_trip_requests_diversion_loading">Div.: loading&#8230;</string>
    <string name="join_trip_requests_diversion_hmin">Div.: %1$s:%2$s h</string>
    <string name="join_trip_requests_diversion_min">Div.: %s min</string>
    <string name="offer_choose_destination">Specify start location</string>
    <string name="offer_change_destination">Change destination</string>
    <string name="offer_max_diversion">Max diversion (in km):</string>
    <string name="price">Price per km (in cent):</string>
    <string name="offer_trip">Offer Trip</string>
    <string name="offer_trip_no_location">Offer Trip failed: Your location is unknown.</string>
    <string name="offer_trip_no_destination">Offer Trip failed: No destination location could be extracted.</string>
    <string name="duration_text">"Duration: %1$dh %2$dm %3$ds"</string>
    <string name="distance_text">"Distance: %1$.1fkm"</string>
    <string name="offer_trip_pick_up_passenger_default">A passenger</string>
    <string name="offer_trip_pick_up_passenger">%1$s is waiting for you at %2$s. Remember to pick him up!</string>
    <string name="offer_trip_pick_up_price">You may charge him %s €.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="navigation">Navigation</string>
    <string name="no_route_found">No route could be found for your request.</string>
    <string name="select_car">Select your default car</string>
    <string name="save_changes">Save Changes</string>
    <string name="discard_changes">Discard Changes</string>
    <string name="offer_trip_request_expired">Something went wrong, passenger could not be accepted</string>
    <string name="enable_gps_title">GPS not available</string>
    <string name="enable_gps_description">This application works best with GPS on your device enabled. Enable now?</string>
    <string name="enable_gps_ask">Please do not show again</string>
    <string name="enable_gps_ok">ok</string>
    <string name="enable_gps_cancel">cancel</string>
    <string name="join_trip_no_matches">No matches were found on your route</string>
    <string name="gpd_not_available">Sorry! We couldn´t find your current location!</string>
    <string name="redirect_to_placepicker">Tell us where you are</string>
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="car_plate_hint">e.g 123456</string>
    <string name="car_type_hint">e.g Porsche 911</string>
    <string name="ask_register">We found a driver for you. But unfortunately you need to register for joining that trip!</string>
    <string name="car_type_side">Car Type: \u0020</string>
    <string name="car_plate_side">Car Plate: \u0020</string>
    <string name="car_capacity_side">Car Capacity: \u0020</string>
    <string name="delete_vehicle_button">Delete This Vehicle</string>
    <string name="vehicle_in_use">You cannot delete a car that you are currently having in your trip offer!</string>
    <string name="add_vehicle">Add a car!</string>
    <string name="add_new_vehicle">Add to cars</string>
    <string name="vehicles_title">My Vehicles</string>
    <string name="no_car_plate_title">Add Car Plate Info</string>
    <string name="no_car_plate_message">Your passengers cannot identify you without information about your car. Update information now?</string>
    <string name="no_vehicles_added">You have not added any vehicles</string>
    <string name="join_request_title">New join request!</string>
    <string name="joint_request_msg">%1$s wants to join your trip.</string>
    <string name="trip_canceled_msg">Oh no, apparently your trip was canceled!</string>
    <string name="trip_canceled_by_passenger">Oh no, one of your passengers cancelled the trip!</string>
    <string name="new_msg">New Message</string>
    <string name="join_request_sent">Your request has been sent to the driver. We will inform you as soon as the driver answers your request.</string>
    <string name="join_request_sending_error">There was an error sending your request.</string>
    <string name="join_request_accepted_title">Accepted Request</string>
    <string name="join_request_accepted_msg">Congratulations! %1$s is taking you to your destination.</string>
    <string name="join_request_declined_msg">Your request was declined by the driver.</string>
    <string name="join_request_declined_title">Declined request!</string>
    <string name="found_matches_title">Found Matches!</string>
    <string name="found_matches_msg">Found new Matches for your recent query.</string>
    <string name="navigation_error_no_offer">Error: You have currently no running offer.</string>
    <string name="error_position_update_title">No position update possible</string>
    <string name="error_position_update_message">Sorry, seems like we lost you. Once your connection is restored more passengers will find your Trip!</string>
    <string name="success_position_update_message">Your position could be successfully uploaded. Your trip will be reenabled.</string>
    <string name="success_position_update_title">Position update was successfull</string>
    <string name="nfc_explanation_passenger">Tap the phone of your driver to start the trip</string>
    <string name="my_trip_driver_cancel_trip">Cancel Trip!</string>
    <string name="my_trip_driver_finish_trip">Finish Trip!</string>
    <string name="my_trip_driver_my_passengers_title">My Passengers</string>
    <string name="my_trip_driver_my_earnings_title">My Earnings</string>
    <string name="my_trip_driver_my_earnings">%1$s.%2$s €</string>
    <string name="error_contacting_server">Something went wrong with contacting the server</string>
    <string name="offer_trip_failed">Offering your trip failed. Please try again.</string>
    <string name="load_trip_failed">Loading your trip failed. Please try again.</string>
    <string name="load_route_failed">Loading your route failed. Please try again.</string>
    <string name="load_passengers_failed">Loading your passengers failed. Please try again.</string>
    <string name="crash_popup_title">Something went wrong...</string>
    <string name="load_location">We are waiting for your location.</string>
</resources>