<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <RelativeLayout
        android:id="@+id/layout_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical|center_horizontal">

            <EditText
                android:id="@+id/et_email"
                android:width="200dp"
                android:inputType="textEmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"/>

            <EditText
                android:id="@+id/et_firstName"
                android:width="200dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_firstname"/>

            <EditText
                android:id="@+id/et_lastName"
                android:width="200dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_lastname"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:width="200dp"
                android:id="@+id/et_password"
                android:hint="@string/hint_password"/>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"/>

        </LinearLayout>



        </RelativeLayout>



    <RelativeLayout
        android:id="@+id/layout_choose"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:gravity="center_vertical|center_horizontal">

            <Button
                android:id="@+id/btn_login_email"
                android:layout_width="200dp"
                android:background="@color/text"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/login_email"/>

            <ImageView
                android:layout_margin="0dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@drawable/loginwithfacebook"
                android:paddingTop="@dimen/default_margin" />

            <ImageView
                android:layout_margin="0dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@drawable/loginwithgoogle"
                android:paddingTop="@dimen/default_margin" />

            </LinearLayout>

        <TextView
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:text="@string/skip"
            android:gravity="bottom"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />



        </RelativeLayout>

</FrameLayout>