<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <FrameLayout
        android:id="@+id/layout_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical|center_horizontal">

            <EditText
                android:id="@+id/et_email"
                android:width="200dp"
                android:inputType="textEmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"/>

            <EditText
                android:id="@+id/et_firstName"
                android:width="200dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_firstname"/>

            <EditText
                android:id="@+id/et_lastName"
                android:width="200dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_lastname"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:width="200dp"
                android:id="@+id/et_password"
                android:hint="@string/hint_password"/>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/pb_register"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity = "center_vertical|center_horizontal"
            android:visibility="gone">
        </ProgressBar>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical|center_horizontal">

            <EditText
                android:id="@+id/et_login_email"
                android:width="200dp"
                android:inputType="textEmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"/>

            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:width="200dp"
                android:hint="@string/hint_password"/>

            <TextView
                android:id="@+id/tv_invalid_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/invalid_login"
                android:textColor="@color/error"
                />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"/>

            <Button
                android:id="@+id/btn_forgot_pwd"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_pwd"
                android:background="@android:color/transparent"/>
            </LinearLayout>

        <ProgressBar
            android:id="@+id/pb_login"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity = "center_vertical|center_horizontal"
            android:visibility="gone">
        </ProgressBar>
    </FrameLayout>



    <RelativeLayout
        android:id="@+id/layout_choose"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:gravity="center_vertical|center_horizontal">

            <Button
                android:id="@+id/btn_login_with_email"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/login_email"/>

            <ImageView
                android:layout_margin="0dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@drawable/loginwithfacebook"
                android:paddingTop="@dimen/default_margin" />

            <ImageView
                android:layout_margin="0dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@drawable/loginwithgoogle"
                android:paddingTop="@dimen/default_margin"
                android:paddingBottom="@dimen/default_margin"/>

            <Button
                android:id="@+id/btn_register_email"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_marginTop="@dimen/activity_vertical_margin"/>

            </LinearLayout>

        <TextView
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:text="@string/skip"
            android:gravity="bottom"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />



        </RelativeLayout>

</FrameLayout>