<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ The CroudTrip! application aims at revolutionizing the car-ride-sharing market with its easy,
  ~ user-friendly and highly automated way of organizing shared Trips. Copyright (C) 2015  Nazeeh Ammari,
  ~  Philipp Eichhorn, Ricarda Hohn, Vanessa Lange, Alexander Popp, Frederik Simon, Michael Weber
  ~ This program is free software: you can redistribute it and/or modify  it under the terms of the GNU
  ~  Affero General Public License as published by the Free Software Foundation, either version 3 of the
  ~   License, or (at your option) any later version.
  ~  This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without
  ~  even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~   GNU Affero General Public License for more details.
  ~  You should have received a copy of the GNU Affero General Public License along with this program.
  ~    If not, see http://www.gnu.org/licenses/.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin">

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/layout_join_trip_results"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_join_trip_results_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:textAppearance="@android:style/TextAppearance.Large"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_join_trip_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/layout_join_trip_waiting"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:layout_gravity="center_horizontal"
            android:text="@string/join_trip_results_waiting"
            android:gravity="center_horizontal" />

        <ProgressBar
            android:id="@+id/pb_join_trip_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity = "center_vertical|center_horizontal"
            style="@android:style/Widget.ProgressBar.Inverse"/>

        <Button
            android:id="@+id/btn_joint_trip_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/join_trip_results_stop"/>

        </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/layout_join_trip_accepted"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_joint_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:layout_gravity="center_horizontal"
            android:text="@string/join_trip_results_pickup"
            android:gravity="center_horizontal" />

        <Button
            android:id="@+id/btn_joint_trip_reached"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/join_trip_results_reached"/>

        <Button
            android:id="@+id/btn_joint_trip_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/join_trip_results_report"/>

        <Button
            android:id="@+id/btn_joint_trip_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/join_trip_results_cancel"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_join_trip_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textColor="@color/error"
        android:text="@string/join_trip_results_error"
        android:layout_gravity = "center_vertical|center_horizontal"/>

</FrameLayout>

